--- a/docker/nginx/conf.d/default.conf
+++ b/docker/nginx/conf.d/default.conf
@@ -25,7 +25,7 @@ server {
 	}
 
 	location /api {
-		proxy_pass http://backend:7860;
+		proxy_pass http://10.66.15.239:7860;
 		proxy_read_timeout 300s;
 		proxy_set_header Host $host;
 		proxy_set_header X-Real-IP $remote_addr;
