--- a/src/backend/pyproject.toml
+++ b/src/backend/pyproject.toml
@@ -20,7 +20,7 @@ bisheng = "bisheng.__main__:main"
 [tool.poetry.dependencies]
 bisheng_langchain = "0.2.1"
 bisheng_pyautogen = "0.1.18"
-minio = "^7.2.0"
+minio = "7.2.0"
 fastapi_jwt_auth = "^0.5.0"
 celery = { extras = ["redis"], version = "^5.3.6", optional = true }
 redis = "^5.0.0"
@@ -95,6 +95,11 @@ types-pyyaml = "^6.0.12.8"
 [tool.poetry.extras]
 deploy = ["langchain-serve"]
 
+
+[[tool.poetry.source]]
+name = "mirrors"
+url = "https://mirrors.aliyun.com/pypi/simple/"
+priority = "default"
 
 [tool.pytest.ini_options]
 minversion = "6.0"
